--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ main {
 h1 {
     font-size: 56px;
     color: #75B79E;
+    text-align: center;
 }
 
 .ctn-cards {
@@ -22,7 +23,7 @@ h1 {
     justify-content: space-around;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 68vw;
+    width: 70vw;
 
 }
 
@@ -32,8 +33,10 @@ h1 {
     align-items: center;
     width: 14vw;
     height: 15vw;
+    min-width: 117px;
+    min-height: 125px;
     border-radius: 4px;
-    margin-top: 10px;
+    margin: 10px 10px;
     border: 1px solid #99CEA8;
     background-color: #A7E9AF;
 }
