--- a/css/style.css
+++ b/css/style.css
@@ -31,15 +31,44 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     width: 14vw;
     height: 15vw;
     min-width: 117px;
     min-height: 125px;
     border-radius: 4px;
     margin: 10px 10px;
-    border: 1px solid #99CEA8;
-    background-color: #A7E9AF;
 }
+.red {
+    background-color: red;
+}
+.face {
+    width: 100%;
+    height: 100%;
+    background-color: #A7E9AF;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: all .5s;
+    transform-style: preserve-3d;
+  }
+
+ 
+  .back-face {
+    transform: rotateY(180deg);
+  }
+
+  .card.active .back-face {
+    transform: rotateY(0deg);
+  }
+
+  .card.active .front-face {
+    transform: rotateY(-180deg);
+  }
 
 .card img {
     width: 80%;
