--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,10 @@ main {
     left: 0;
     display: flex;
     justify-content: space-between;
+    height: 20px;
     padding: 5px 10px;
+    background-color: #EEF9BF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     color: #75B79E;
     font-weight: bold;
     font-size: 20px;
