--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 60px;
+    overflow-y: hidden;
+    margin-bottom: 20px;
 }
 
 .ctn-status {
@@ -43,6 +44,7 @@ h1 {
     flex-direction: row;
     width: 70vw;
     margin-top: 47px;
+    
 }
 
 .card {
@@ -52,6 +54,8 @@ h1 {
     position: relative;
     width: 12vw;
     height: 13vw;
+    max-width: 210px;
+    max-height: 230px;
     min-width: 117px;
     min-height: 125px;
     border-radius: 4px;
@@ -162,9 +166,7 @@ strong {
     width: 95%;
 }
 
-.ctn-ranking .labels {
-    margin: 10px 0;
-}
+
 
 .ctn-ranking .scores {
     max-height: 500px;
@@ -178,19 +180,23 @@ strong {
     justify-content: space-between;
 }
 
-.ctn-ranking ul .l{
-    margin: 15px 0;
-    font-size: 26px;
+.ctn-ranking ul.labels{
+    margin: 10px 0;
+    font-size: 22px;
 }
 
 .ctn-ranking ul .txt-ranking span {
-    width: 30%;
+    width: 25%;
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
 }
 
-.ctn-ranking ul .txt-ranking .span-rank{
+.ctn-ranking ul .txt-ranking span#name {
+    width: 40%;
+}
+
+.ctn-ranking ul .txt-ranking #rank{
     width: 10%;
 }
 
@@ -246,3 +252,4 @@ button {
     -webkit-user-select: none;
     -o-user-select: none;
 }
+
