--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,6 @@ strong {
 .ctn-ranking {
     width: 100%;
     height: 100%;
-    max-width: 600px;
     top: 0;
     position: fixed;
     z-index: 2;
@@ -119,6 +118,8 @@ strong {
 .content-ranking{
     width: 95%;
     height: 80%;
+    max-width: 600px;
+    max-height: 700px;
     position: sticky;
     top: 0;
     background-color: #77aa77;
